--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.2",
     "email-validator": "^2.0.4",
+    "gapi-script": "^1.2.0",
     "jsonwebtoken": "^9.0.2"
   }
 }
